# handwritten-japanese-ocr

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  handwritten-japanese-OCR-touch-panel-demo.py  handwritten-japanese-ocr-touch-panel-demo-cpp.py  handwritten-japanese-ocr-touch-panel-demo.py  models.lst  postprocess.cpp  setup_ocv_vars.bat  setup_ocv_vars.sh  text_detection_postprocess.cpp
